restauth-common 0.7.0 (XX XXXX 2014)

  * Content handlers now support lists as dictionary values, as required by
    RestAuth 0.7.
  * Add RestAuthCommon.strprep to normalize and validate entity names based
	according to the restrictions of RestAuth 0.7. This methd is also faster
	then RestAuthCommon.resource_validator, which is now deprecated and should
	no longer be used.
  * Update requirements.

restauth-common 0.6.5 (21 August 2014)

  * RestAuthCommon now requires Python 2.7 or later.
  * Do not import modules from the Python standard library upon module import
	(pickle, json, urllib) but upon first usage via the library attribute.
	This greatly improves import speed.
  * Remove old module-level aliases for content handlers.
  * PyYAML: Wrap eratic behaviour of the Python2 version of PyYAML.
  * BSON: Cast marshalled data to str.
  * Update documentation in various places.

restauth-common 0.6.4.1 (08 March 2014)

  * This release does not contain any functional changes. If you already have
    0.6.4, there is no need to update.
  * Minor packaging fixes.
  * Test resource_validator function

restauth-common 0.6.4 (02 March 2014)

  * Support pymongo as BSON implementation, the pure python implementation is
    still supported as well.
  * Fix Python 3.4 incompatablities in the JSON handler.
  * Update Debian/Ubuntu documentation.

restauth-common 0.6.3 (01 March 2014)

  Distribution:
  * Move code to github: https://github.com/RestAuth/RestAuthCommon
  * No longer use bootstrap distribute installation but plain distutils.
  * Don't include the test.py file and generated documentation with pip.

  Features:
  * Add support for BSON ("Binary JSON") and MessagePack.
  * Remove the unmarshal() function. It's not used anywhere and since you have
    to pass the type anyway, it offers nothing over using the functions
    directly.
  * Make sure functions always raise MarshalError/UnmarshalError and wrap any
    exceptions thrown by libraries they use.